# embot

./: .gitignore  embot  embot.cabal  install-deps.sh  stack.yaml
src/: Embot.hs  main.hs
src/Embot/: Action.hs  Command.hs  Config.hs  Core.hs  Driver.hs  Env.hs  Event.hs  Helpers.hs  Plugins.hs  Slack.hs  SlackAPI.hs  SlackState.hs  SlackStateChangelog.hs  TextShowOrphans.hs  Types.hs  Utils.hs  Wire.hs
src/Embot/Commands/: Dice.hs  Help.hs  SlackStateDump.hs
src/Embot/Examples/: Echo.hs
src/Embot/Plugins/: Commands.hs  Echo.hs  SlackInfo.hs  SlackInfoCommands.hs
