name:                embot
version:             0.1.0.0
synopsis:            Embot the Slack Bot
description:         No description yet
homepage:            http://github.com/Dridus/embot
license:             BSD3
license-file:        LICENSE
author:              Ross MacLeod
maintainer:          rmm+hackage@z.odi.ac
copyright:           2015 Ross MacLeod
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable embot
  hs-source-dirs:      src
  main-is:             main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

  other-modules:       Embot
                     , Embot.Action
                     , Embot.Config
                     , Embot.Driver
                     , Embot.Examples.Echo
                     , Embot.Slack
                     , Embot.SlackState
                     , Embot.TextShowOrphans
                     , Embot.Types
                     , Embot.Wire
                     , Paths_embot
                                                    
  build-depends:       base
                     , HsOpenSSL
                     , aeson
                     , bytestring
                     , classy-prelude
                     , classy-prelude-conduit
                     , containers
                     , directory
                     , Diff
                     , dyre
                     , fast-logger
                     , io-streams
                     , lens
                     , lifted-base
                     , monad-logger
                     , mtl
                     , netwire
                     , network
                     , network-uri
                     , old-locale
                     , openssl-streams
                     , scientific
                     , template-haskell
                     , text
                     , text-icu
                     , text-show
                     , time
                     , transformers
                     , unordered-containers
                     , websockets
                     , wreq
                     
  default-language:    Haskell2010

  extensions:          Arrows
                     , CPP
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , NoMonomorphismRestriction
                     , OverloadedStrings
                     , QuasiQuotes
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , ViewPatterns
